--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <!--Link to style sheet-->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
