--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,7 +24,8 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
+
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
@@ -79,7 +80,7 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
-    
+
 </body>
 
 </html>
